--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nuxt/icon": "^1.15.0",
     "@nuxt/image": "^1.11.0",
     "@nuxtjs/seo": "^3.1.0",
+    "@nuxtjs/supabase": "^1.6.2",
     "@nuxtjs/tailwindcss": "^6.14.0",
     "@pinia/nuxt": "^0.11.2",
     "nuxt": "^4.0.1",
