--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,7 @@
 {
   "buildCommand": "npm run build",
-  "outputDirectory": ".output/public"
+  "outputDirectory": ".output/public",
+  "env": {
+    "NITRO_PRERENDER": "true"
+  }
 }
