Test v2 Vercel Link

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,33 @@
 {
-  "buildCommand": "npm run build",
+  "buildCommand": "npm run generate",
   "outputDirectory": ".output/public",
-  "env": {
-    "NITRO_PRERENDER": "true"
-  }
+  "headers": [
+    {
+      "source": "/_nuxt/(.*).css",
+      "headers": [
+        {
+          "key": "Content-Type",
+          "value": "text/css; charset=utf-8"
+        }
+      ]
+    },
+    {
+      "source": "/_nuxt/(.*).js",
+      "headers": [
+        {
+          "key": "Content-Type",
+          "value": "application/javascript; charset=utf-8"
+        }
+      ]
+    },
+    {
+      "source": "/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "s-maxage=31536000, stale-while-revalidate"
+        }
+      ]
+    }
+  ]
 }
