--- a/vercel.json
+++ b/vercel.json
@@ -1,33 +1,4 @@
 {
   "buildCommand": "npm run generate",
-  "outputDirectory": ".output/public",
-  "headers": [
-    {
-      "source": "/_nuxt/(.*).css",
-      "headers": [
-        {
-          "key": "Content-Type",
-          "value": "text/css; charset=utf-8"
-        }
-      ]
-    },
-    {
-      "source": "/_nuxt/(.*).js",
-      "headers": [
-        {
-          "key": "Content-Type",
-          "value": "application/javascript; charset=utf-8"
-        }
-      ]
-    },
-    {
-      "source": "/(.*)",
-      "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "s-maxage=31536000, stale-while-revalidate"
-        }
-      ]
-    }
-  ]
+  "outputDirectory": ".output/public"
 }
